--- a/Pages.html/Preguntas Frecuentes.html
+++ b/Pages.html/Preguntas Frecuentes.html
@@ -7,6 +7,7 @@
     <title>Sofi's Cakes:Preguntas Frecuentes</title>
     <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="shortcut icon" href="../Imag/119511422_604626806848442_5333069351850279029_n.jpg" type="image/x-icon"> 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
             
             <br>
             <br>
-                <h1>Preguntas Frecuentes</h1>
+                <h1 data-aos="zoom-in-up">Preguntas Frecuentes</h1>
                 <a href="../index.html"><img class="encabezado" src="../Imag/logo sin fondo.png" alt="logo" /></a> 
             <br>
             <br>
@@ -88,5 +89,10 @@
           <br>
            <strong>Todos los derechos reservados</strong>
        </footer>
+
+       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+       <script>
+         AOS.init();
+       </script>
 </body>
 </html>
