--- a/Pages.html/Productos.html
+++ b/Pages.html/Productos.html
@@ -7,13 +7,15 @@
     <title>Sofi's Cakes:Productos</title>
     <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="shortcut icon" href="../Imag/119511422_604626806848442_5333069351850279029_n.jpg" type="image/x-icon"> 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body> 
     <div class="contenedorGiganteProducto">
         <header>
                   
             <div class="headerProducto">   
-                 <h1>Productos</h1>
+                 <h1 data-aos="fade-right">Productos</h1>
                  <a href="../index.html"><img class="encabezado" src="../Imag/logo sin fondo.png" alt="logo" /></a> 
             </div>
         </header>
@@ -133,5 +135,10 @@
 
 
     </div>
+    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
