--- a/Pages.html/Quienes Somos.html
+++ b/Pages.html/Quienes Somos.html
@@ -7,13 +7,14 @@
     <title>Sofi's Cakes:Quienes Somos</title>
     <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="shortcut icon" href="../Imag/119511422_604626806848442_5333069351850279029_n.jpg" type="image/x-icon"> 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="cajaGrandeQuienesSomos">
    
     <header>
 
         <div class="encabezadoQuienesSomos">
-            <h1>Quienes Somos</h1>
+            <h1 data-aos="zoom-in">Quienes Somos</h1>
             <a href="../index.html"><img class="encabezado" src="../Imag/logo sin fondo.png" alt="logo" /></a> 
         </div>
 
@@ -93,7 +94,12 @@
       
        <strong>Todos los derechos reservados</strong>
    </footer>
-   
+
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+     AOS.init();
+   </script>
+
 
 </body>
 </html>
